alerta descripcion retos

--- a/packages/app/public/html/dashParticipante.html
+++ b/packages/app/public/html/dashParticipante.html
@@ -113,6 +113,7 @@
                 <div class="recentCustomers sombra">
                     <div class="cardHeader">
                         <h2>Progress</h2>
+                        <button onclick="aleta()">jaja</button>
                     </div>
                     <div class="card">
                         <div class= "contenedor1" id="perfil">
@@ -127,6 +128,8 @@
     </div>
     <script src="../js/dashboard.js"></script>
     <script src="../js/perfilUser.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src="../js/alertDescrip.js"></script>
 
 </body>
 </html>
