--- a/packages/app/public/html/dashboard.html
+++ b/packages/app/public/html/dashboard.html
@@ -171,7 +171,7 @@
                     ###############
                 -->
 
-
+                <button onclick="aleta()">jaja</button>
                 <!--<div class="details">
                     <dir class="recentOrders sombra">
                         <div class="cardHeader">
@@ -205,5 +205,7 @@
         </div>
     </div>
     <script src="../js/dashboard.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <script src="../js/alertDescrip.js"></script>
 </body>
 </html>
