--- a/packages/app/public/html/dashPsicologo.html
+++ b/packages/app/public/html/dashPsicologo.html
@@ -175,6 +175,7 @@
     </div>
     <script src="../js/dashboard.js"></script>
     <script src="../js/perfilUser.js"></script>
+    <script src="../dashboardPsicologo.js"></script>
 
 </body>
 </html>
