--- a/packages/app/public/html/dashPsicologo.html
+++ b/packages/app/public/html/dashPsicologo.html
@@ -174,7 +174,7 @@
         </div>
     </div>
     <script src="../js/dashboard.js"></script>
-    <script src="../dashboardPsicologo.js"></script>
+    <script src="../js/dashboardPsicologo.js"></script>
 
 </body>
 </html>
