arreglos de actividades

--- a/packages/app/public/html/dashPsicologo.html
+++ b/packages/app/public/html/dashPsicologo.html
@@ -175,6 +175,8 @@
     </div>
     <script src="../js/dashboard.js"></script>
     <script src="../js/dashboardPsicologo.js"></script>
+    <script src="../js/deleteActivity.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
 </body>
 </html>
