Se agrega fix the authenticacion en la ruta /login

--- a/packages/app/public/html/login.html
+++ b/packages/app/public/html/login.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../css/fontello.css">
     <link rel="stylesheet" href="../css/estilos.css">
     <script src="../js/js.js"></script>
+    <script src="../js/authenticate.js"></script>
 </head>
 
 <header>
