--- a/packages/app/public/html/dashParticipante.html
+++ b/packages/app/public/html/dashParticipante.html
@@ -86,7 +86,7 @@
                             <line x1="4" y1="12" x2="8" y2="8" />
                             <line x1="20" y1="4" x2="20" y2="20" />
                         </svg></span>
-                        <span class="title">Sing out</span>
+                        <span class="title" onclick="logout()" >Sing out</span>
                     </a>
                 </li>
             </ul>
