--- a/packages/app/public/html/dashParticipante.html
+++ b/packages/app/public/html/dashParticipante.html
@@ -159,7 +159,7 @@
     </div>
     <script src="../js/dashboard.js"></script>
     <script src="../js/perfilUser.js"></script>
-
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 </body>
 </html>
 
