--- a/packages/app/public/html/PerfilParticipante.html
+++ b/packages/app/public/html/PerfilParticipante.html
@@ -191,5 +191,7 @@
     </div>
     <script src="../js/dashboard.js"></script>
     <script src="../js/perfilUser.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
 </body>
 </html>
