arreglo modificar Tatiana

--- a/packages/app/public/html/crearEventos.html
+++ b/packages/app/public/html/crearEventos.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../css/fontello.css">
-  <link rel="stylesheet" href="../css/estilos.css">
-  <link rel="stylesheet" href="../css/estiloCrearEvento.css">
-  <script src="../js/js.js"></script>
-  <script src="../js/authenticate.js"></script>
+  <link rel="stylesheet" href="/css/fontello.css">
+  <link rel="stylesheet" href="/css/estilos.css">
+  <link rel="stylesheet" href="/css/estiloCrearEvento.css">
+  <script src="/js/js.js"></script>
+  <script src="/js/authenticate.js"></script>
   <title>Crear Evento|Health Space</title>
 </head>
 <header>
@@ -48,7 +48,7 @@
   </section>
 
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-  <script src="../js/crearEvento.js"></script>
+  <script src="/js/crearEvento.js"></script>
   
 </body>
 </html>
