arreglo boton volver crear eventos Tatiana y arreglo detail activity Carlos

--- a/packages/app/public/html/crearEventos.html
+++ b/packages/app/public/html/crearEventos.html
@@ -42,7 +42,7 @@
       <input type="file" id="file" name="image" accept=".jpg, .jpeg, .png">
       <p>Estoy de acuerdo con <input type="radio" required=""><a href="#">Terminos y Condiciones</a></p>
       <input class="botons" type="submit" value="Crear">
-      <p><a href="/events">volver</a></p>
+      <p><a href="javascript:;window.history.back();">volver</a></p>
 
     </form>
   </section>
