Fix de crear actividad

--- a/packages/app/public/html/crearEventos.html
+++ b/packages/app/public/html/crearEventos.html
@@ -39,7 +39,7 @@
       <b>Ingrese una descripción del Evento:</b>
       <textarea name="textarea" id="descripcion" rows="3" cols="60"></textarea>
       <b>Ingrese una imagen</b>
-      <input type="file" id="file" name="image" accept=".jpg, .jpeg, .png">
+      <input type="file" name="image" id="image" accept=".jpg, .jpeg, .png">
       <p>Estoy de acuerdo con <input type="radio" required=""><a href="#">Terminos y Condiciones</a></p>
       <input class="botons" type="submit" value="Crear">
       <p><a href="javascript:;window.history.back();">volver</a></p>
