--- a/packages/app/public/html/contacto.html
+++ b/packages/app/public/html/contacto.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../css/fontello.css">
         <link rel="stylesheet" href="../css/estilos.css">
+        <link rel="stylesheet" href="../css/card.css">
         <script src="../js/js.js"></script>
     <head>
     <header>
@@ -25,6 +26,107 @@
         <main>
             <section id="info" style="padding-top: 60px;">
                 <p>Contacto</p>
+                <section>
+                    <div class="container">
+                        <div class="card">
+                            <img src="https://lh3.googleusercontent.com/oUUiPB9sq3ACq4bUaRmo8pgvC4FUpRRrQKcGIBSOsafawZfRpF1vruFeYt6uCfL6wGDQyvOi6Ez9Bpf1Fb7APKjIyVsft7FLGR6QqdRFTiceNQBm1In9aZyrXp33cZi9pUNqjHASdA=s170-no" alt="Person" class="card__image">
+                            <p class="card__name">Brandon Olaya</p>
+                        <div class="grid-container">
+                            <div class="grid-child-posts">
+                            Cel:
+                            </div>
+                            <div class="grid-child-followers">
+                            3102004103
+                            </div>
+                        </div>
+                        <form action="https://www.instagram.com/brandonvaol/">
+                        <button class="btn draw-border">Follow</button>
+                         </form>
+                        <button class="btn draw-border">Message</button>
+                        </div>
+                        <div class="card">
+                            <img src="https://lh3.googleusercontent.com/ytP9VP86DItizVX2YNA-xTYzV09IS7rh4WexVp7eilIcfHmm74B7odbcwD5DTXmL0PF42i2wnRKSFPBHlmSjCblWHDCD2oD1oaM1CGFcSd48VBKJfsCi4bS170PKxGwji8CPmehwPw=w200-h247-no"  alt="Person" class="card__image">
+                        <p class="card__name">Julieth Gomez</p>
+                        <div class="grid-container">
+                            <div class="grid-child-posts">
+                            Tel: 
+                            </div>
+                            <div class="grid-child-followers">
+                                3202878852
+                            </div>
+                        </div>
+                        <form action="#">
+                            <button class="btn draw-border">Follow</button>
+                             </form>
+                        <button class="btn draw-border">Message</button>
+                        </div>
+                        <div class="card">
+                            <img src="https://lh3.googleusercontent.com/oUUiPB9sq3ACq4bUaRmo8pgvC4FUpRRrQKcGIBSOsafawZfRpF1vruFeYt6uCfL6wGDQyvOi6Ez9Bpf1Fb7APKjIyVsft7FLGR6QqdRFTiceNQBm1In9aZyrXp33cZi9pUNqjHASdA=s170-no" alt="Person" class="card__image">
+                            <p class="card__name">Jonattan Infante</p>
+                        <div class="grid-container">
+                            <div class="grid-child-posts">
+                            Tel: 
+                            </div>
+                            <div class="grid-child-followers">
+                                3057087887
+                            </div>
+                        </div>
+                        <form action="#">
+                            <button class="btn draw-border">Follow</button>
+                             </form>
+                        <button class="btn draw-border">Message</button>
+                        </div>
+                        <div class="card">
+                            <img src="https://lh3.googleusercontent.com/oUUiPB9sq3ACq4bUaRmo8pgvC4FUpRRrQKcGIBSOsafawZfRpF1vruFeYt6uCfL6wGDQyvOi6Ez9Bpf1Fb7APKjIyVsft7FLGR6QqdRFTiceNQBm1In9aZyrXp33cZi9pUNqjHASdA=s170-no" alt="Person" class="card__image">
+                            <p class="card__name">Carlos Arevalo</p>
+                        <div class="grid-container">
+                            <div class="grid-child-posts">
+                            Cel:
+                            </div>
+                            <div class="grid-child-followers">
+                            3138831417
+                            </div>
+                        </div>
+                        <form action="#">
+                            <button class="btn draw-border">Follow</button>
+                             </form>
+                        <button class="btn draw-border">Message</button>
+                        </div>
+                        <div class="card">
+                        <img src="https://lh3.googleusercontent.com/pZwZJ5HIL5iKbA91UGMUIPR0VJWa3K0vOGzDZmY6wU3EJBUdfsby3VEyxU162XxTyOyP3D154tjkr-4Jgcx8lygYUR8eB-jVmld4dsHi1c-mE_A8jKccseAG7bdEwVrcuuk6ciNtSw=s170-no" alt="Person"  alt="Person" class="card__image">
+                        <p class="card__name">Tatiana Velasquez</p>
+                        <div class="grid-container">
+                            <div class="grid-child-posts">
+                            Tel:
+                            </div>
+                            <div class="grid-child-followers">
+                                3203222863
+                            </div>
+                        </div>
+                        <form action="#">
+                            <button class="btn draw-border">Follow</button>
+                             </form>
+                        <button class="btn draw-border">Message</button>
+                        </div>
+                        <div class="card">
+                            <img src="https://lh3.googleusercontent.com/oUUiPB9sq3ACq4bUaRmo8pgvC4FUpRRrQKcGIBSOsafawZfRpF1vruFeYt6uCfL6wGDQyvOi6Ez9Bpf1Fb7APKjIyVsft7FLGR6QqdRFTiceNQBm1In9aZyrXp33cZi9pUNqjHASdA=s170-no" alt="Person" class="card__image">
+                            <p class="card__name">David arteaga</p>
+                        <div class="grid-container">
+                            <div class="grid-child-posts">
+                            Tel: 
+                            </div>
+                            <div class="grid-child-followers">
+                                3163672894
+                            </div>
+                        </div>
+                        <form action="">
+                            <button class="btn draw-border">Follow</button>
+                             </form>
+                        <button class="btn draw-border">Message</button>
+                        </div>
+                    </div>
+                    <br>
+                </section
                 <hr>
                 <br>
                 <br>
