--- a/packages/app/public/html/dashPsicologo.html
+++ b/packages/app/public/html/dashPsicologo.html
@@ -18,7 +18,7 @@
                 <li>
                     <li>
                         <a href="">
-                            <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-send" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-send" width="20" height="20" viewBox="0 0 24 24" stroke-width="1" stroke="#3a4142f5" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <line x1="10" y1="14" x2="21" y2="3" />
                                 <path d="M21 3l-6.5 18a0.55 .55 0 0 1 -1 0l-3.5 -7l-7 -3.5a0.55 .55 0 0 1 0 -1l18 -6.5" />
@@ -130,7 +130,7 @@
                         <div class="cardName">I created event</div>
                     </div>
                     <div class="iconBox">
-                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-square-plus" width="50" height="50" viewBox="0 0 24 24" stroke-width="1.5" stroke="#36bed9" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-square-plus" width="50" height="50" viewBox="0 0 24 24" stroke-width="1.5" stroke="#3a4142f5" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                             <rect x="4" y="4" width="16" height="16" rx="2" />
                             <line x1="9" y1="12" x2="15" y2="12" />
